# sowa

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bully.rb  bully_config.yml  clean.sh  compile.sh  configure.sh  full.sh  imgui.ini  layout.html  make.sh  nmres.sh  nmres_configure.sh  output.escn  project.ease  proto.sh  res_rules.txt  runnerconfig.yml  scene.escn  test.sh  zlib.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cmake.yml  (+1 more)
Ease_Data/: batch2d.glsl  framebuffer.glsl  shader.frag  shader.glsl  shader.vert
Editor/: Sowa.Editor.lua
Modules/: CMakeLists.txt  Ease.Core.cc  Ease.Editor.cc
ProjectManager/: CMakeLists.txt  Main.escn  project.ease
ProjectManager/Modules/: Ease.Editor.Panels.as  Ease.Editor.as  Ease.Editor.lua  Ease.ProjectManager.cc  Sowa.ProjectManager.lua  module_template.lua
Sowa/: CMakeLists.txt
Sowa/App/: CMakeLists.txt
Sowa/App/backends/: linux_main.cpp  win_main.cpp
Sowa/App/include/res/: imgui.ini  notice.txt
Sowa/App/include/res/shaders/: batch2d.frag  batch2d.vert  default2d.frag  default2d.glsl  default2d.vert  final.frag  fullscreen.frag  fullscreen.vert  solid_color.frag  solid_color.vert  text.frag  text.glsl  text.vert
Sowa/App/src/: Sowa.hpp  debug.cpp  debug.hpp  main.cpp  object_type.cpp  object_type.hpp  sowa.hpp  stlpch.hpp
Sowa/App/src/Core/: Application.cpp  Application.hpp  ExportGenerator.cpp  Project.cpp  Project.hpp  ProjectSettings.cpp  ProjectSettings.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
Sowa/App/src/ECS/Components/: Components.hpp
Sowa/App/src/ECS/Components/AnimatedSprite2D/: AnimatedSprite2D.hpp
Sowa/App/src/ECS/Components/Button/: Button.hpp
Sowa/App/src/ECS/Components/Camera2D/: Camera2D.hpp
Sowa/App/src/ECS/Components/NinePatchRect/: NinePatchRect.cpp
Sowa/App/src/ECS/Components/PhysicsBody2D/: PhysicsBody2D.cpp  PhysicsBody2D.hpp
Sowa/App/src/ECS/Components/ScriptContainer/: ScriptContainer.cpp
Sowa/App/src/ECS/Components/Sprite2D/: Sprite2D.hpp
Sowa/App/src/ECS/Components/Text2D/: Text2D.hpp
Sowa/App/src/ECS/Components/Transform2D/: Transform2D.hpp
Sowa/App/src/ECS/Scene/: Scene.cpp  Scene.hpp
Sowa/App/src/ECS/Systems/: System_AnimatedSprite2D.cpp  System_ButtonLogic.cpp  System_ButtonPicking.cpp  System_Camera2DLogic.cpp  System_Physics2DDebugDraw.cpp  System_PhysicsBody2D.cpp  System_ScriptContainerLogic.cpp  System_Sprite2D.cpp  System_Text2D.cpp  Systems.cpp  Systems.hpp
Sowa/App/src/Resource/: Resource.hpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp
Sowa/App/src/Resource/EditorTheme/: EditorTheme.cpp  EditorTheme.hpp
Sowa/App/src/Resource/Texture/: Texture.hpp
Sowa/App/src/Scene/: Node.hpp  Scene.cpp  Scene.hpp
Sowa/App/src/Servers/GuiServer/: GuiServer.cpp
Sowa/App/src/Utils/: YAML.cpp  YAML.hpp
Sowa/App/src/argparser/: arg_option.cpp  arg_parser.cpp  arg_parser.hpp  impl.hpp
Sowa/App/src/core/: application.cpp  application.hpp  audio_server.cpp  audio_server.hpp  audio_stream.cpp  audio_stream.hpp  engine_context.cpp  engine_context.hpp  export_generator.cpp  export_generator.hpp  file_buffer.cpp  file_buffer.hpp  input.hpp  node_db.cpp  node_db.hpp  project.cpp  project.hpp  renderer.cpp  renderer.hpp  script_server.cpp  script_server.hpp  stats.cpp  stats.hpp  window.cpp  window.hpp
Sowa/App/src/gfx/: batch_renderer.cpp  batch_renderer.hpp  font.cpp  font.hpp  graphics.cpp  graphics.hpp  shader.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
Sowa/App/src/gfx/gl/: batch_renderer_gl.cpp  batch_renderer_gl.hpp  buffer_gl.cpp  buffer_gl.hpp  font_gl.cpp  font_gl.hpp  framebuffer_gl.cpp  framebuffer_gl.hpp  glfuncs.cpp  glfuncs.hpp  graphics_gl.cpp  graphics_gl.hpp  mesh_gl.cpp  mesh_gl.hpp  shader_gl.cpp  shader_gl.hpp  texture_gl.cpp  texture_gl.hpp  vertex_array_gl.cpp  vertex_array_gl.hpp
Sowa/App/src/math/: math.hpp
Sowa/App/src/math/matrix/: mat4.cpp  mat4.hpp
Sowa/App/src/math/vector/: rect.cpp  rect.hpp  size.cpp  size.hpp  vec2.hpp  vec2f.cpp  vec2f.hpp
Sowa/App/src/resource/: resource.hpp  resource_loader.cpp  resource_loader.hpp  resource_manager.cpp  resource_manager.hpp
Sowa/App/src/resource/font/: font.cpp  font.hpp
Sowa/App/src/resource/resource_watcher/: resource_watcher.cpp  resource_watcher.hpp
Sowa/App/src/resource/texture/: image_texture.cpp  image_texture.hpp  ninepatch_texture.cpp  ninepatch_texture.hpp  texture.cpp  texture.hpp
Sowa/App/src/scene/: audio_stream_player.cpp  audio_stream_player.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp
Sowa/App/src/scene/2d/: button.cpp  button.hpp  camera_2d.cpp  camera_2d.hpp  nine_slice_panel.cpp  nine_slice_panel.hpp  ninepatchrect.cpp  ninepatchrect.hpp  node2d.cpp  node2d.hpp  sprite2d.cpp  sprite2d.hpp  text2d.cpp  text2d.hpp
Sowa/App/src/scene/ui/: menu_bar.cpp  menu_bar.hpp  menu_bar_item.cpp  menu_bar_item.hpp  ui_node.cpp  ui_node.hpp
Sowa/App/src/serialize/: document.cpp  document.hpp  serializer.cpp  serializer.hpp  toml_serializer.cpp  toml_serializer.hpp
Sowa/App/src/utils/: algorithm.hpp  dialog.cpp  dialog.hpp  event.cpp  event.hpp  file.cpp  file.hpp  light_variant.cpp  light_variant.hpp  math.cpp  math.hpp  memory.cpp  memory.hpp  random.cpp  random.hpp  string.cpp  string.hpp  time.cpp  time.hpp
Sowa/App/src/utils/event/: input_event.hpp
Sowa/Editor/: CMakeLists.txt
TestGame/: Main.escn  project.ease
TestProject/: .swproj  project.sowa  scene.toml
cmd/: update.sh
include/: Ease.hpp  EaseEngine.hpp
modules/: CMakeLists.txt  Ease.Core.cc  Ease.Editor.cc
project/: project.sowa
res/: theme.escfg
runner/: CMakeLists.txt  commands.hpp  config.cpp  config.hpp  console.hpp  filesystem.cpp  filesystem.hpp  net.cpp  net.hpp  runner.cpp  runner.hpp  utils.cpp  utils.hpp
runner/command/: activate.cpp  autoupdate.cpp  help.cpp  install.cpp  list.cpp  runversion.cpp  update.cpp  version.cpp
src/: Debug.cpp  Debug.hpp  Ease.hpp  Global.hpp  errorCodes.hpp  global.hpp  main.cpp  main.cxx  sowa.hxx
testproj/: project.ease
(+678 files in other folders)
