set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/Modules)

add_library(Ease.Core SHARED Ease.Core.cc)
set_target_properties(Ease.Core PROPERTIES PREFIX "")
target_include_directories(Ease.Core PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include)
target_include_directories(Ease.Core PRIVATE ${CMAKE_SOURCE_DIR}/Ease/thirdparty/)
target_include_directories(Ease.Core PRIVATE ${CMAKE_SOURCE_DIR}/Ease/thirdparty/imgui-docking/)
target_include_directories(Ease.Core PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include/thirdparty/)
target_include_directories(Ease.Core PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include/thirdparty/raylib/include/)
target_include_directories(Ease.Core PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include/thirdparty/glm/)

add_library(Ease.Editor SHARED Ease.Editor.cc)
set_target_properties(Ease.Editor PROPERTIES PREFIX "")
target_include_directories(Ease.Editor PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include)
target_include_directories(Ease.Editor PRIVATE ${CMAKE_SOURCE_DIR}/Ease/thirdparty/)
target_include_directories(Ease.Editor PRIVATE ${CMAKE_SOURCE_DIR}/Ease/thirdparty/imgui-docking/)
target_include_directories(Ease.Editor PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include/thirdparty/)
target_include_directories(Ease.Editor PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include/thirdparty/raylib/include/)
target_include_directories(Ease.Editor PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include/thirdparty/glm/)
target_include_directories(Ease.Editor PRIVATE ${CMAKE_SOURCE_DIR}/Ease/thirdparty/nmGfx/src/)