set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/ProjectManager/Modules)

add_library(Ease.ProjectManager SHARED Modules/Ease.ProjectManager.cc)
set_target_properties(Ease.ProjectManager PROPERTIES PREFIX "")
target_include_directories(Ease.ProjectManager PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include)
target_include_directories(Ease.ProjectManager PRIVATE ${CMAKE_SOURCE_DIR}/Ease/thirdparty/)
target_include_directories(Ease.ProjectManager PRIVATE ${CMAKE_SOURCE_DIR}/Ease/thirdparty/imgui-docking/)
target_include_directories(Ease.ProjectManager PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include/thirdparty/)
target_include_directories(Ease.ProjectManager PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include/thirdparty/raylib/include/)
target_include_directories(Ease.ProjectManager PRIVATE ${CMAKE_SOURCE_DIR}/Ease/include/thirdparty/glm/)